--- a/app/views/categories/_category.html.erb
+++ b/app/views/categories/_category.html.erb
@@ -1,7 +1,5 @@
-<div class='catContainer' id="<%= dom_id category %>">
-  <p>
-    <strong>Name:</strong>
-    <%= link_to category.name, category %>
+<div  id="<%= dom_id category %>">
+  <p class='text-decoration-none'>
+    <%= link_to category.name, category , class:'text-decoration-none' %>
   </p>
-
 </div>
