--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,9 +1,10 @@
+<div class='container'>
 <h1>New category</h1>
 
 <%= render "form", category: @category %>
 
 <br>
 
-<div>
+
   <%= link_to "Back to categories", categories_path %>
 </div>
