--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,11 +1,13 @@
-<p style="color: green"><%= notice %></p>
+<div class='container'>
+  <p style="color: green"><%= notice %></p> 
 
-<%= render @category %>
-
-<div>
-  <%= link_to 'New Post', new_post_path %>
-  <%= link_to "Edit this category", edit_category_path(@category) %> |
-  <%= link_to "Back to categories", categories_path %>
-
+  <%= @category.name %>
+  <br>
+  <%= link_to 'New Post', new_post_path , class:'text-decoration-none' %>
+  <br>
+  <%= link_to "Edit this category", edit_category_path(@category) , class:'text-decoration-none' %> 
+  <br>
+  <%= link_to "Back to categories", categories_path , class:'text-decoration-none' %>
+  <br>
   <%= button_to "Destroy this category", @category, method: :delete %>
 </div>
