--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Personal Blog</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -10,7 +10,7 @@
                         <li class="nav-item"><%= link_to 'Home', root_path , class:'nav-link px-lg-3 py-3 py-lg-4'%></li>
                         <li class="nav-item"><%= link_to 'Category', categories_path , class:'nav-link px-lg-3 py-3 py-lg-4'%></li>
                         <li class="nav-item"><%= link_to 'Create a Post', new_post_path , class:'nav-link px-lg-3 py-3 py-lg-4'%></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contact Me</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="https://miyutogo.github.io/portfolio/">Contact Me</a></li>
                     </ul>
                 </div>
             </div>
